--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ steps:
     npm config set user 0
     npm config set unsafe-perm true
     npm i -g jest
+    npm install better-sqlite3
     npm install
     npm test
   displayName: 'npm install and build'
