--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ steps:
     npm config set unsafe-perm true
     npm i -g jest
     npm install better-sqlite3
+    npm i polyfill-object.fromentries
     npm install
     npm test
   displayName: 'npm install and build'
