--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ steps:
     npm i -g jest
     npm install better-sqlite3
     npm i polyfill-object.fromentries
+    npm install fromentries
     npm install
     npm test
   displayName: 'npm install and build'
